--- a/css/style.css
+++ b/css/style.css
@@ -381,8 +381,42 @@ button {
     cursor: pointer;
 }
 
+button:hover {
+    opacity: 0.3;
+}
+
 .Travel_text > button {
     color: white;
+}
+
+.preloader {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 100000;
+    background-color: white;
+    top: 0;
+    display: flex;
+    align-items: center;
+}
+
+.preloader img {
+    animation: spin 3s ease;
+    width: 150px;
+    transition: all;
+    margin: 0 auto;
+}
+
+@keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(360deg);
+    }
+    100% {
+      transform: rotate(720deg);
+    }
 }
 
 @media only screen and (max-width:600px) {
