--- a/css/style.css
+++ b/css/style.css
@@ -1,430 +1,133 @@
-*{
-    list-style: none;
-    text-decoration: none;
-    border-collapse: collapse;
-    margin: 0px;
-    padding: 0px;
-    color: black;
-}
-
-body {
+* {
     font-family: 'Montserrat', sans-serif;
 }
 
-h2 {
-    font-size: 30px;
-    font-weight: 700;
+.navBar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    font-size: 15px;
+  }
+  
+  .navBar li {
+    float: right;
+  }
+  
+  .navBar li a {
+    display: block;
+    color: #333;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  li:hover {
+      text-decoration: underline;
+  }
+
+  .Hero {
+      height: 270px;
+  }
+
+  .Hero h1 {
+      padding-top: 50px;
+      padding-bottom: 20px;
+      font-family: 'Ubuntu', sans-serif;
+      font-size: 40px;
+      text-align: center;
+  }
+
+  .Hero h2 {
+      font-family: 'Ubuntu', sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      text-align: center;
+  }
+
+  .Project h3 {
+      text-align: center;
+      font-size: 20px;
+  }
+
+  .Project1 {
+      height: 250px;
+      background-image: url(../images/CaseStudy1.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      align-items: center;
+      display: flex;
+      position: relative;
+      margin-bottom: 20px;
+  }
+
+  .Project1:hover {
+      opacity: 0.5;
+  }
+
+  .Project2 {
+    height: 250px;
+    background-image: url(../images/CaseStudy2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    align-items: center;
+    display: flex;
+    position: relative;
+    margin-bottom: 20px;
 }
 
-h3 {
+.Project2:hover {
+    opacity: 0.5;
+}
+
+.Project3 {
+    height: 250px;
+    background-image: url(../images/CaseStudy3.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    align-items: center;
+    display: flex;
+    position: relative;
+}
+
+.Project3:hover {
+    opacity: 0.5;
+}
+
+.Logo h3 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
     font-size: 20px;
-    font-weight: 600;
 }
 
-h4 {
+.Logo h4 {
+    text-align: center;
     font-size: 16px;
     font-weight: 400;
 }
 
-.intro_text h1 {
-    font-family: 'Bangers', cursive;
-    font-size: 45px;
-    font-weight: 700;
-    padding-bottom: 20px;
+.logoImg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
 }
 
-.contents1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    font-weight: 50;
-}
-
-.intro_bg {
-    background-image: url(../images/Hero_revised.png);
-    background-repeat: no-repeat;
-    margin-left: 100px;
-    width: 1280px;
-    height: 718px;
-}
-
-.header {
-    display: flex;
-    width: 1280px;
-    margin: auto;
-    /*background-color: orangered;*/
-    height: 86px;
-}
-
-.homeButton {
-    display: flex;
-    justify-content: flex-start;
-    line-height: 86px;
-    width: 300px;
-    /*background: orange;*/
-    padding-left: 20px;
-    color: white;
-}
-
-.homeButton > li > a {
-    color: white;
-}
-.nav {
-    display: flex;
-    justify-content: flex-end;
-    line-height: 86px;
-    width: calc(1280px - 300px);
-    /*background: blue;*/
-    padding-right: 20px;
-}
-
-.nav > li {
-    margin-left: 84px;
-}
-
-.nav > li > a {
-    color: white;
-}
-
-.intro_text {
-    width: 500px;
-    margin-left: 120px;
-    margin-top: 200px;
-    /*background: red;*/
-    text-align: center;
-}
-
-.intro_text > h1, .intro_text > h4 {
-    color: white;
-    padding-bottom: 60px;
-}
-
-.logo {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 100px;
-}
-
-.logo > img {
-    margin-top: -140px;
-    padding-left: 20px;
-    width: 300px;
-}
-
-.mySkills {
-    margin-top: auto;
-    margin-left: 100px;
-    width: 1280px;
-    text-align: center;
-}
-
-.mySkills > h2 {
-    /*background-color: red;*/
-    margin-bottom: 20px;
-}
-
-.mySkills > h4 {
-    /*background-color: blue;*/
-    padding-top: 20px;
-    font-weight: 400;
-    padding-bottom: 20px;
-
-}
-
-.flexContainer > p {
-    /*background-color: yellow;*/
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-weight: 600;
-}
-
-.main_text {
-    margin-top: auto;
-    padding-top: 50px;
-    width: 1280px;
-    text-align: center;
-    margin-left: 100px;
-    /*background: skyblue;*/
-}
-
-.contents {
-    display: grid;
-    width: 1280px;
-    margin: auto;
-    grid-template-areas: 
-    'CRA Dogs'
-    'Phonebox Travel';
-}
-
-.contents > .CaseStudy {
-    flex: 1;
-    height: 302px;
-    background-image: url(../images/CRA.png);
+footer {
     margin-top: 50px;
-    background-repeat: no-repeat;
+    text-align: center;
 }
 
-.contents > .CaseStudy2 {
-    flex: 1;
-    height: 302px;
-    background-image: url(../images/Dogs_draft.png);
-    margin-top: 50px;
-    background-repeat: no-repeat;
-}
-
-.contents > li:not(:last-child) {
-    margin-right: 20px;
-}
-
-.contents > .CaseStudy > .CRA {
-    grid-area: CRA;
-    flex: 43%;
-    background-size: 100%;
-    height: 302px;
-    background-repeat: no-repeat;
-    margin-left: 50px;
-    margin-top: 35px;
-}
-
-.CaseStudy, .CaseStudy2, .CaseStudy3, .CaseStudy4 {
+footer li {
     display: flex;
- } 
-
-.CRA_text {
-    flex: 57%;
-    margin-right: 20px;
-    margin-top: 60px;
-}
-
-.CRA_text > h3, .Dogs_text > h3, .Phonebox_text > h3, .Travel_text > h3 {
-    margin-bottom:30px;
-}
-
-.Dogs_text {
-    flex: 57%;
-    margin-right: 20px;
-    margin-top: 60px;
-}
-
-.contents > .CaseStudy2 > .Dogs {
-    grid-area: Dogs;
-    flex: 43%;
-    background-size: 100%;
-    height: 302px;
-    background-repeat: no-repeat;
-    margin-left: 50px;
-    margin-top: 35px;
-}
-
-.contents .CaseStudy4 .Travel {
-    grid-area: Travel;
-    flex: 43%;
-    background-size: 100%;
-    height: 302px;
-    background-repeat: no-repeat;
-    margin-left: 50px;
-    margin-top: 35px;
-}
-
-.main_text_2 {
-    margin-top: auto;
-    width: 1280px;
-    text-align: center;
-    margin-left: 100px;
-    /*background: skyblue;*/
-}
-
-.contents .CaseStudy3 {
-    flex: 1;
-    height: 302px;
-    background-image: url(../images/email_draft.png);
-    margin-top: 20px;
-    background-repeat: no-repeat;
-}
-
-.contents .CaseStudy4 {
-    flex: 1;
-    height: 302px;
-    background-image: url(../images/travel_draft.png);
-    margin-top: 20px;
-    background-repeat: no-repeat;
-    color: white;
-}
-
-
-
-.contents > .CaseStudy3 > .Phonebox {
-    grid-area: Phonebox;
-    flex: 43%;
-    background-size: 100%;
-    height: 302px;
-    background-repeat: no-repeat;
-    margin-left: 50px;
-    margin-top: 35px;
-}
-
-.Phonebox_text {
-    flex: 57%;
-    margin-right: 20px;
-    margin-top: 60px;
-}
-
-.Phonebox_text > h2 {
-    margin-bottom: 20px;
-}
-
-.Travel_text {
-    flex: 57%;
-    margin-right: 20px;
-    margin-top: 60px;
-}
-
-.Travel_text > h2 {
-    margin-bottom: 20px;
-    color: white;
-}
-
-.Travel_text > h3, .Travel_text > h4 {
-    color: white;
-}
-
-.contents > .CaseStudy2 > .Dogs {
-    flex: 43%;
-    background-size: 60%;
-    height: 302px;
-    background-repeat: no-repeat;
-    margin-left: 50px;
-    margin-top: 35px;
-}
-
-.logo_story {
-    /*background-color: red;*/
-    height: 350px;
-    width: 1280px;
-    text-align: center;
-    margin-left: 100px;
-}
-
-.logo_story > h2 {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom:50px;
-}
-
-.logo_story > h4 {
-    margin-bottom: 15px;
-}
-
-.logo_story > img {
-    width: 200px;
-    margin-left: 1000px;
-    margin-top: -20px;
-}
-
-.footer {
-    margin-top: 100px;
-    background: blue;
-    height: auto;
-    width: 1280px;
-    padding-top: 40px;
-    color: white;
-    margin-left: 100px;
-}
-
-.footer_content {
-    margin-top: 50px;
-    margin-left: 100px;
-    text-align: center;
-    align-items: center;
-    /*background: blue;*/
-    height: auto;
-    width: 1280px;
-    color: white;
-}
-
-.footer_content > .Socials {
-    display: flex;
-    margin: auto;
-    text-align: center;
-    align-items: center;
-    width: 300px;
     flex-direction: column;
+    padding: 10px;
 }
 
-.footer_centent > .Socials > li {
-    flex: 1;
-    width: 300px;
-    /*background: blue;*/
-    padding-right: 20px;
-}
-.footer_bottom {
-    width: 1280px;
-    text-align: center;
-    margin-top: 20px;
-    margin-left: 100px;
-    margin-bottom: 20px;
-}
-
-.footer_content > h3 {
-    margin-bottom: 20px;
-}
-
-button {
-    margin-top: 15px;
-    background-color: transparent;
-    border: none;
-    color: black;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-button:hover {
-    opacity: 0.3;
-}
-
-.Travel_text > button {
-    color: white;
-}
-
-.preloader {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    z-index: 100000;
-    background-color: white;
-    top: 0;
-    display: flex;
-    align-items: center;
-}
-
-.preloader img {
-    animation: spin 3s ease;
-    width: 150px;
-    transition: all;
-    margin: 0 auto;
-}
-
-@keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    50% {
-      transform: rotate(360deg);
-    }
-    100% {
-      transform: rotate(720deg);
-    }
-}
-
-@media only screen and (max-width:600px) {
-    .Contents {
-        grid-template-areas:
-        "CRA"
-        "Dogs"
-        "Phonebox"
-        "Travel";
-    }
+.FooterTitle {
+    font-weight: 700;
 }
